opam-version: "2.0"
name: "wombat"
maintainer: "Walter Tetzner"
version: "0.1.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "sedlex" {= "1.99.4"}
  "bitstring" {= "2.1.1"}
  "ppx_bitstring" {= "2.0.2" build}
  "core" {= "v0.9.1" build}
  "ANSITerminal" {= "0.8"}
  "jbuilder" {= "1.0+beta16" build}
  "ppx_deriving" {= "4.2" build}
  "ocaml" {>= "4.05.0" build}
]

