
(env
  (dev
    ;; Don't treat warnings as errors
    (flags (:standard -warn-error -A -w -A)))
  (check
    ;; Treat all warnings as errors
    (flags (:standard -warn-error A -w A)))
  (static
    ;; Statically link
    (flags (:standard -warn-error -A -ccopt -static))))

(executable
 (name rygg)
 (modes (best exe) (byte c))
 (libraries Vmu Compiler core ANSITerminal)
 (preprocess (pps ppx_let ppx_inline_test))
 (modules Rygg))

(executable
 (name librygg)
 (modes (native object))
 (libraries Vmu Compiler core ANSITerminal)
 (preprocess (pps ppx_let ppx_inline_test))
 (modules librygg))

; (library
;  (name Rygg)
;  (inline_tests)
;  (modules Compiler)
;  (preprocess (pps ppx_inline_test))
;  (wrapped true))

; (install
;  (section bin)
;  (files (rygg.exe as rygg)))

